--- a/marquee/style.css
+++ b/marquee/style.css
@@ -1,11 +1,19 @@
 .marquee { overflow: hidden; }
 
-.marquee > img { padding-left: 100%; -webkit-animation: marquee 10s infinite linear; animation: marquee 10s infinite linear; }
-
 .marquee > img:hover { -webkit-animation-play-state: paused; animation-play-state: paused; }
 
-@-webkit-keyframes marquee { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
+.marquee--moveRightToLeft > img { padding-left: 100%; -webkit-animation: moveRightToLeft 10s infinite linear; animation: moveRightToLeft 10s infinite linear; }
+
+.marquee--moveLeftToRight > img { padding-right: 100%; margin-left: -210px; -webkit-animation: moveLeftToRight 10s infinite linear; animation: moveLeftToRight 10s infinite linear; }
+
+@-webkit-keyframes moveRightToLeft { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
   100% { -webkit-transform: translateX(-100%); transform: translateX(-100%); } }
 
-@keyframes marquee { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
+@keyframes moveRightToLeft { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
   100% { -webkit-transform: translateX(-100%); transform: translateX(-100%); } }
+
+@-webkit-keyframes moveLeftToRight { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
+  100% { -webkit-transform: translateX(100%); transform: translateX(100%); } }
+
+@keyframes moveLeftToRight { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
+  100% { -webkit-transform: translateX(100%); transform: translateX(100%); } }
