--- a/marquee/style.css
+++ b/marquee/style.css
@@ -12,7 +12,13 @@
 
 .marquee--moveTwoLeftToRight .marquee__item { -ms-flex-negative: 0; flex-shrink: 0; width: 100%; -webkit-animation: moveLeftToRight 10s infinite linear; animation: moveLeftToRight 10s infinite linear; }
 
-.marquee--script .marquee__item { -ms-flex-negative: 0; flex-shrink: 0; width: 100%; }
+.marquee--itemOne[data-direction="left"] .marquee__item { padding-left: 100%; }
+
+.marquee--itemOne[data-direction="right"] .marquee__item { padding-right: 100%; }
+
+.marquee--itemTwo[data-direction="right"] { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
+
+.marquee--itemTwo .marquee__item { -ms-flex-negative: 0; flex-shrink: 0; width: 100%; }
 
 @-webkit-keyframes moveRightToLeft { 0% { -webkit-transform: translateX(0%); transform: translateX(0%); }
   100% { -webkit-transform: translateX(-100%); transform: translateX(-100%); } }
