--- a/popup/style.css
+++ b/popup/style.css
@@ -1,6 +1,8 @@
 * { padding: 0; margin: 0; }
 
-.popup { position: fixed; top: 0; right: 0; bottom: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.4); }
+.popup { position: fixed; top: 0; right: 0; bottom: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.4); visibility: hidden; opacity: 0; -webkit-transition: .3s ease-in-out; transition: .3s ease-in-out; }
+
+.popup.is-active { visibility: visible; opacity: 1; }
 
 .popup-inner { position: absolute; left: 32px; top: 80px; width: calc(100% - 64px); padding: 24px 22px 20px; border-radius: 8px; -webkit-box-sizing: border-box; box-sizing: border-box; background-color: #fff; }
 
