--- a/popup/style.scss
+++ b/popup/style.scss
@@ -12,6 +12,15 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .4);
+  
+  visibility: hidden;
+  opacity: 0;
+  transition: .3s ease-in-out;
+  
+  &.is-active {
+    visibility: visible;
+    opacity: 1;
+  }
 
   &-inner {
     position: absolute;
